2024-11-14-15:16 格式化代码风格，添加代码检查，优化代码错误