@@ -18,8 +18,8 @@ import com.aizuda.snailjob.client.common.event.SnailClientStartingEvent;
 import com.aizuda.snailjob.client.starter.EnableSnailJob;
 import leyramu.framework.lersosa.common.core.utils.StringUtils;
 import leyramu.framework.lersosa.common.job.config.properties.SnailJobServerProperties;
+import lombok.RequiredArgsConstructor;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
@@ -31,26 +31,27 @@ import org.springframework.scheduling.annotation.EnableScheduling;
 import java.util.List;
 
 /**
- * 启动定时任务
+ * 启动定时任务.
  *
  * @author <a href="mailto:2038322151@qq.com">Miraitowa_zcx</a>
  * @version 1.0.0
  * @since 2024/11/6
  */
 @AutoConfiguration
+@RequiredArgsConstructor
 @EnableConfigurationProperties(SnailJobServerProperties.class)
 @ConditionalOnProperty(prefix = "snail-job", name = "enabled", havingValue = "true")
 @EnableScheduling
 @EnableSnailJob
 public class SnailJobConfig {
 
-    @Autowired
-    private SnailJobServerProperties properties;
-    @Autowired
-    private DiscoveryClient discoveryClient;
+    private final SnailJobServerProperties properties;
+
+    @SuppressWarnings("all")
+    private final DiscoveryClient discoveryClient;
 
     @EventListener(SnailClientStartingEvent.class)
-    public void onStarting(SnailClientStartingEvent event) {
+    public void onStarting(SnailClientStartingEvent ignoredEvent) {
         // 从 nacos 获取 server 服务连接
         registerServer();
         // 注册 日志监控配置
@@ -58,7 +59,7 @@ public class SnailJobConfig {
     }
 
     @EventListener(SnailChannelReconnectEvent.class)
-    public void onReconnect(SnailChannelReconnectEvent event) {
+    public void onReconnect(SnailChannelReconnectEvent ignoredEvent) {
         // 连接中断 重新从 nacos 获取存活的服务连接(高可用配置)
         registerServer();
     }
@@ -68,7 +69,7 @@ public class SnailJobConfig {
         if (StringUtils.isNotBlank(serverName)) {
             List<ServiceInstance> instances = discoveryClient.getInstances(serverName);
             if (CollUtil.isNotEmpty(instances)) {
-                ServiceInstance instance = instances.get(0);
+                ServiceInstance instance = instances.getFirst();
                 System.setProperty("snail-job.server.host", instance.getHost());
                 System.setProperty("snail-job.server.port", properties.getPort());
             }
@@ -83,5 +84,4 @@ public class SnailJobConfig {
         Logger rootLogger = lc.getLogger(Logger.ROOT_LOGGER_NAME);
         rootLogger.addAppender(ca);
     }
-
 }
